packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__selection_enum_batch_group_selected.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
">│⠋ ▶  batch1 (2)                                                                                                       "
" │·    Waiting for task...                                                                                              "
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"  ·    standalone:test                                                                                    ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
