packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__shared_task_grouped_with_in_progress_section.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
">│⠋    app1:test                                                                                          ...       <1ms"
" │⠋    app2:lint                                                                                            -        ..."
" └                                                                                                                      "
"  ✔    app1:build                                                                                           -        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
