packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__short_height_rendering.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"       Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
">│⠋    app1:test                                                                                          ...       <1ms"
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"  ·    app1:build                                                                                         ...        ..."
"  ·    app2:lint                                                                                          ...        ..."
"                                                                                                                        "
"                                                                                                                        "
