packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__task_with_cache_status.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                        Cache   Duration"
"                                                                                                                        "
"> ✔    app1:build                                                                                      Remote        ..."
"  ✔    app1:test                                                                                        Local        ..."
"  ✔    app2:lint                                                                                        Match        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
