packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__terminal_routing_batch_context.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Batch Display Test...                                                                    Cache   Duration"
" │                                                                                                                      "
" │⠋ ▼  batch1 (2)                                                                                                       "
">│⠋      app:build                                                                                        ...       <1ms"
" │⠋      lib:build                                                                                        ...        ..."
" └                                                                                                                      "
"  ·    standalone:test                                                                                    ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
