packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__terminal_routing_lib_task_in_batch.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
" │⠋ ▼  batch1 (2)                                                                                                       "
" │⠋      app:build                                                                                        ...       <1ms"
">│⠋      lib:build                                                                                        ...        ..."
" └                                                                                                                      "
"  ·    standalone:test                                                                                    ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
