packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__terminal_routing_mixed_contexts.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"       Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
" │⠋ ▼  batch1 (2)                                                                                                       "
" │⠋      app:build                                                                                        ...       <1ms"
" │⠋      lib:build                                                                                        ...        ..."
" └                                                                                                                      "
"> ·    standalone:test                                                                                    ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
