packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__terminal_routing_standalone_task.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                        Cache   Duration"
" │                                                                                                                      "
">│⠋    app:build                                                                                          ...       <1ms"
" │·    Waiting for task...                                                                                              "
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"  ·    lib:build                                                                                          ...        ..."
"  ·    standalone:test                                                                                    ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
