packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__three_tasks_one_in_progress_two_pending_with_two_max_parallel.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 2752
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
" │                                                                                                                      "
">│⠋    app1:test                                                                                          ...       <1ms"
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"  ·    app1:build                                                                                         ...        ..."
"  ·    app2:lint                                                                                          ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
